// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "grpc-myboot/proto";
option java_multiple_files = true;
option java_package = "com.limaopu.grpc.proto";
option java_outer_classname = "MyServiceProto";

package proto;

service MyService {
  rpc RpcExecute (RpcRequest) returns (RpcResponse) {}
  rpc RpcJsonExecute (RpcJsonRequest) returns (RpcJsonResponse) {}
}

message RpcRequest {
  string route = 1;
  string token = 2;
  bytes data = 3;
}

message RpcResponse {
  int32 code = 1;
  string message = 2;
  bytes data = 3;
}

message RpcJsonRequest {
  string route = 1;
  string data = 2;
}

message RpcJsonResponse {
  int32 code = 1;
  string message = 2;
  string data = 3;
}
